# poetry-test-project

./: .editorconfig  .flake8  README.md  pyproject.toml
poetry_test_project/: sample.py
