[tool.poetry]
name = "poetry-test-project"
version = "0.1.0"
description = ""
authors = ["WSBTFC513"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line-length = 119
include_trailing_comma = true

[tool.mypy]
